<resources>
    <string name="app_name">CookMania</string>

    <string name="login_input_hint">Email…</string>
    <string name="login_password_hint">Password…</string>
    <string name="login_button_text">Login</string>

    <string name="facebook_app_id">2345180169101572</string>
    <string name="fb_login_protocol_scheme">fb2345180169101572</string>
    <string name="email_login_button_text">"Connect with Email        "</string>
    <string name="next">next</string>
    <string name="login_username_hint">Username…</string>
    <string name="login_password_confirm_hint">Confirm password…</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">register</string>

    <string name="empty_field_warning">This field is empty</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_match_error">Passwords don\'t match</string>
    <string name="email_not_valid">This email is not valid</string>
    <string name="password_short_error">Password must have at least 4 characters</string>

    <!-- Application Configuration -->
    <string name="prefs_name">prefs</string>
    <string name="pref_image_url">image_url</string>
    <string name="prefs_username">username</string>
    <string name="prefs_user_id">user_id</string>
    <string name="prefs_user_email">user_email</string>
    <string name="prefs_signin_method">signin_method</string>
    <string name="prefs_uuid">uuid</string>
    <string name="prefs_recipes_viewed_list">recipes_viewed_list</string>
    <string name="method_email">email</string>
    <string name="method_facebook">facebook</string>
    <string name="method_google">google</string>

    <!-- -->
    <string name="signin">sign in</string>
    <string name="connect_with_google">"Connect with Google     "</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="ingredients">Ingredients</string>
    <string name="calories">Calories</string>
    <string name="minutes">Minutes</string>
    <string name="servings">Servings</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, sagittis tellus pharetra in lectus, pretium pellentesque ut donec, venenatis vehicula odio, nunc volutpat duis bibendum tempus. Amet non. Sem consectetuer aliquam, quis quis quis turpis quos, vehicula odio nascetur. Porttitor lorem, id pulvinar viverra ipsum libero, suspendisse nulla id luctus tempor.</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, sagittis tellus pharetra in lectus, pretium pellentesque ut donec, venenatis vehicula odio, nunc volutpat duis bibendum tempus. Amet non.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, sagittis tellus pharetra in lectus, pretium pellentesque ut donec.</string>
    <string name="shop">Shop</string>
    <string name="steps">Steps</string>
    <string name="rate_recipe">Rate this recipe</string>
    <string name="leave_review">Leave a short review</string>
    <string name="review_comment_hint">Tell us what you think</string>
    <string name="about">About</string>
    <string name="favorite">Add to favorites</string>
    <string name="remove_favorite">Remove from favorites</string>
    <string name="add_photo">Add a photo</string>

    <string-array name="unit_names">
        <item>N/A</item>
        <item>g</item>
        <item>ml</item>
    </string-array>

    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="experience_added">Your experience has been added.</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>
    <string name="experience_not_added">Could not save experience.</string>
    <string name="experience_not_deleted">Could not delete experience.</string>
    <string name="rated_on">Rated on</string>
    <string name="stop_the_alarm">Stop the alarm</string>
    <string name="time_is_up">Time is up!</string>
    <string name="experiences">Experiences</string>
    <string name="similar">Similar</string>
    <string name="my_recipes">My recipes</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="no_recipes">You have no recipes.</string>
    <string name="no_favorite_recipes">You have no favorite recipes.</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="no_followers">No followers.</string>
    <string name="no_following">No users found.</string>
    <string name="confirmation_message_delete_recipe">Are you sure you want to delete this recipe ?</string>
    <string name="confirmation">Confirmation</string>
    <string name="add_all_to_shop_list">Add all ingredients to your shopping list</string>
    <string name="remove_all_from_shop_list">Remove all ingredients from your shopping list</string>
    <string name="no_recipes_found">No recipes found.</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="edit_account">Edit account</string>
    <string name="you_signed_in_using">You signed in using</string>
    <string name="login_email_hint">Email...</string>
    <string name="save">Save</string>
    <string name="error">Error</string>
    <string name="error_message_update_creds">We couldn\'t update your account. There has been a server error.</string>
    <string name="edit_password_hint">Password (leave empty to ignore)</string>
    <string name="edit_password_confirm_hint">Confirm (leave empty to ignore)</string>
    <string name="confirmation_message_delete_account">You will lose all your data. Are you absolutely sure you want to delete your account ?</string>
    <string name="error_message_delete_account">We couldn\'t delete your account. Please try another time.</string>
    <string name="go_to_home">Go to home</string>
    <string name="image_saved">Your image has been saved successfully.</string>
    <string name="offline_text">Offline Mode</string>
    <string name="info_cant_leave_page">Can\'t leave this page without Internet</string>
    <string name="let_the_fun_begin">Let the fun begin !</string>
    <string-array name="rating_opinions">
        <item>Disgusting!</item>
        <item>Meh..</item>
        <item>Nothing special</item>
        <item>I eat this!</item>
        <item>I\'m in love !</item>
    </string-array>
</resources>
