<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/leave_review"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/fragment_rating_comment_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/review_comment_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom">

        <Button
            android:id="@+id/fragment_rating_comment_finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:padding="20dp"
            style="?android:attr/buttonBarPositiveButtonStyle"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</LinearLayout>