<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@android:color/black"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/big_logo"
        app:layout_constraintBottom_toTopOf="@+id/button_login_fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login_fb"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/ripple_rounded"
        android:backgroundTint="#4267b2"
        android:drawableStart="@drawable/facebook_icon"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"

        android:text="@string/connect_with_facebook"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login_google"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_rounded"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/google_icon"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/connect_with_google"
        android:textAllCaps="false"
        android:textColor="#757986"

        app:layout_constraintEnd_toEndOf="@id/button_login_fb"
        app:layout_constraintStart_toStartOf="@id/button_login_fb"
        app:layout_constraintTop_toBottomOf="@id/button_login_fb" />

    <Button
        android:id="@+id/button_login_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"

        android:background="@drawable/ripple_rounded"
        android:backgroundTint="@color/colorAccent"
        android:drawableStart="@drawable/email_icon"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/email_login_button_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"

        app:layout_constraintEnd_toEndOf="@id/button_login_google"
        app:layout_constraintStart_toStartOf="@id/button_login_google"
        app:layout_constraintTop_toBottomOf="@id/button_login_google" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/let_the_fun_begin"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:alpha="0.8"

        app:layout_constraintTop_toBottomOf="@id/button_login_email" />

    <LinearLayout
        android:id="@+id/fragment_login_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@android:color/black"
        android:gravity="center"
        android:translationZ="10dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>