<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:paddingTop="48dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_main_username_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorFaded">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_main_username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username_hint"
                android:textColorHint="@color/colorFaded"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textColor="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_main_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorFaded">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_main_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:textColorHint="@color/colorFaded"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textColor="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_main_password_confirm_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorFaded">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_main_password_confirm_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_confirm_hint"
                android:textColorHint="@color/colorFaded"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textColor="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_main_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_registration_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.7"
        android:gravity="center"
        android:translationZ="10dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>