<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="25dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp">

        <ImageView
            android:id="@+id/fragment_edit_account_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/white_circle_shape"
            android:padding="3dp"
            android:elevation="2dp"
            android:layout_margin="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/fragment_edit_account_camera_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:src="@drawable/icon_camera"
            android:scaleType="centerCrop"
            android:background="@drawable/grey_circle_shape_white_borders"
            android:visibility="gone"
            tools:visibility="visible"
            style="?selectableItemBackground"
            android:padding="8dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="@id/fragment_edit_account_image_view"
            app:layout_constraintBottom_toBottomOf="@id/fragment_edit_account_image_view" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_edit_account_email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionNext" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_edit_account_username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        android:layout_marginBottom="8dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_edit_account_password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        android:layout_marginBottom="8dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionNext" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_edit_account_password_confirm_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password_confirm_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionDone" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>